# soulframe

./: .gitignore  README.md  pyproject.toml  requirements.txt
authoring/backend/: app.py  models.py  routes.py
authoring/frontend/: index.html
content/gallery/example_portrait/: metadata.json
docs/: CODEBASE_AUDIT_2026-02-22.md  CODEBASE_AUDIT_REPEAT2_2026-02-22.md  CODEBASE_AUDIT_REPEAT3_2026-02-22.md  CODEBASE_AUDIT_REPEAT4_2026-02-22.md  CODEBASE_AUDIT_REPEAT5_2026-02-22.md  CODEBASE_AUDIT_REPEAT_2026-02-22.md  HARDWARE_AND_PLATFORM.md  SPEC.md
scripts/: monitor.sh  setup.sh
soulframe/: __init__.py  __main__.py  config.py
soulframe/audio/: audio_stream.py  curves.py  mixer.py  process.py
soulframe/brain/: coordinator.py  image_manager.py  interaction_model.py  state_machine.py
soulframe/display/: effects.py  process.py  renderer.py
soulframe/display/shaders/: breathing.glsl  composite.glsl  kenburns.glsl  parallax.glsl  vertex.glsl  vignette.glsl
soulframe/shared/: geometry.py  ipc.py  smoothing.py  types.py
soulframe/vision/: camera.py  distance_estimator.py  face_detector.py  gaze_estimator.py  process.py  screen_mapper.py
systemd/: soulframe-authoring.service  soulframe.desktop  soulframe.service
